# pixylene

./: .gitignore  Cargo.toml  LICENSE  MANUAL.md  Makefile  README.md  README.org  manual.md  notes.org  temp.md  test.pi
assets/docs/pixylene-lua/: tealr_doc_gen_config.json
assets/images/: README.md
examples/: actions.lua  cli.py  config.toml  truecolor2palette256.py
libpixylene/: Cargo.toml
libpixylene/src/: colors.py  grammar.rs  lib.rs  notes.org  pixylene.rs  utils.rs
libpixylene/src/action/actions/: move_focus.rs  resize_camera.rs
libpixylene/src/common/: pixel.rs
libpixylene/src/elements/: mod.rs  palette.rs
libpixylene/src/file/: canvas_file.rs  mod.rs  png_file.rs  png_file_new.rs  png_file_old.rs  project_file.rs
libpixylene/src/project/: camera.rs  canvas.rs  canvas_new.rs  generic_canvas.rs  layer.rs  layers.rs  mod.rs  palette.rs  project.rs  scene.rs
libpixylene/src/types/: blend_mode.rs  coord.rs  mod.rs  pcoord.rs  pixel.rs  ucoord.rs
libpixylene/src/types/pixel/: indexed_pixel.rs  mod.rs  true_pixel.rs
pixylene-actions/: Cargo.toml
pixylene-actions-lua/: Cargo.toml
pixylene-actions-lua/src/: example.lua  lib.rs  utils.rs
pixylene-actions-lua/src/values/: console.rs  logtype.rs  mod.rs
pixylene-actions-lua/src/values/project/: canvas.rs  layer.rs  mod.rs  opixel.rs  palette.rs  project.rs  scene.rs
pixylene-actions-lua/src/values/types/: blend_mode.rs  coord.rs  pcoord.rs  pixel.rs  ucoord.rs
pixylene-actions/src/: action.rs  action_error.rs  actions.rs  change.rs  console.rs  helper.rs  lib.rs  std_actions.rs  utils.rs
pixylene-actions/src/actions/: move_cursors_up.rs  rectangular_fill.rs  toggle_cursor_at_cursor.rs
pixylene-actions/src/command/: action.rs  action_manager.rs  change.rs  mod.rs
pixylene-actions/src/memento/: action.rs  action_manager.rs  mod.rs
pixylene-actions/src/std_actions/: copy_paste_all_cursors.rs  cursors.rs  draw.rs  layer.rs  move_all_cursors.rs  move_one_cursor.rs  palette.rs  pencil.rs  project.rs  resize_camera.rs  scene.rs  set_focus.rs  shapes.rs  toggle_cursor_at_focus.rs  zoom_camera.rs
pixylene-actions/src/std_actions/cursors/: duplicate_cursors.rs  go_to_single_cursor.rs  move_all_cursors.rs  reset_cursors.rs
pixylene-actions/src/std_actions/layer/: change_opacity.rs  mute.rs  new.rs
pixylene-actions/src/std_actions/palette/: equip.rs
pixylene-actions/src/std_actions/project/: multiplier.rs
pixylene-actions/src/std_actions/scene/: draw.rs  pencil.rs
pixylene-actions/src/std_actions/shapes/: circular_outline.rs
pixylene-crossterm/src/: main.rs  pixylene_tui.rs  raw_actions.rs
pixylene-lua/: Cargo.toml
pixylene-lua/src/: lib.rs  utils.rs
pixylene-lua/src/values/: console.rs  logtype.rs
pixylene-lua/src/values/project/: canvas.rs  indexed_layer.rs  indexed_layers.rs  indexed_scene.rs  mod.rs  palette.rs  project.rs  scene.rs  true_layer.rs  true_layers.rs  true_scene.rs
pixylene-lua/src/values/types/: blend_mode.rs  coord.rs  indexed_pixel.rs  mod.rs  pcoord.rs  pixel.rs  true_pixel.rs  ucoord.rs
pixylene-ui/: Cargo.toml  imports.js  index.html  index.js
pixylene-ui/src/: actions.rs  config.rs  controller.rs  keybinds.rs  lib.rs  main.rs  pixylene_ui.rs  pixylene_ui_target.rs  std-actions.lua  target.rs  ui.rs  utils.rs
pixylene-ui/src/targets/: mod.rs  target_cli.rs  target_crossterm.rs  target_minifb.rs  target_web.rs
pixylenetui/src/: utils.rs
src/: action.rs  camera.rs  color_picker.rs  colors.py  coord.rs  grammar.rs  lib.rs  main.rs  notes.md  notes.org  pixel.rs  pixylene.rs  project.rs  scene.rs  session.rs  state.rs  utils.rs
src/action/: action.rs  action_manager.rs  actions.rs  mod.rs
src/action/actions/: change_camera_repeat.rs  copy_and_paste.rs  copy_paste_all_cursors.rs  draw_at_all_cursors.rs  draw_at_one_cursor.rs  draw_once.rs  move_all_cursors.rs  move_camera.rs  move_focus.rs  move_one_cursor.rs  pencil.rs  rectangular_fill.rs  resize_camera.rs  toggle_cursor_at_cursor.rs  toggle_cursor_at_focus.rs  zoom_camera.rs
src/common/: blend_mode.rs  coord.rs
src/elements/: common.rs  mod.rs  palette.rs  stroke.rs
src/elements/layer/: camera.rs  layer.rs  mod.rs  scene.rs
src/file/: file.rs  mod.rs  png.rs  png_file.rs  project_file.rs  savefile.rs
src/layer/: camera.rs  layer.rs  mod.rs  palette.rs  scene.rs
src/libpixylene/src/: lib.rs  notes.org  pixylene.rs  project.rs
src/libpixylene/src/action/: action.rs  action_manager.rs  actions.rs  mod.rs
src/libpixylene/src/action/actions/: change_camera_repeat.rs  (+14 more)
src/libpixylene/src/common/: blend_mode.rs  mod.rs
src/libpixylene/src/elements/: palette.rs
src/libpixylene/src/file/: mod.rs  png_file.rs  project_file.rs
src/libpixylene/src/project/: camera.rs  canvas.rs  layer.rs  mod.rs  palette.rs  project.rs  scene.rs
src/libpixylene/src/types/: blend_mode.rs  coord.rs  cursor.rs  mod.rs  pixel.rs  ucoord.rs
src/pixylene-actions/: Cargo.toml
src/pixylene-actions-lua/: Cargo.toml
src/pixylene-actions-lua/src/: example.lua  lib.rs  utils.rs
src/pixylene-actions-lua/src/values/: mod.rs
src/pixylene-actions/src/: action.rs  action_manager.rs  actions.rs  helper.rs  lib.rs
src/pixylene-actions/src/actions/: draw_at_all_cursors.rs  move_focus.rs
src/pixylene-crossterm/: Cargo.toml
src/pixylene-crossterm/src/: main.rs  pixylene_tui.rs  utils.rs
src/pixylene-ui/: Cargo.toml
src/pixylene-ui/src/: console.rs  lib.rs  pixylene_ui.rs
src/pixylenetui/: Cargo.toml
src/pixylenetui/src/: actions.rs  app_actions.rs  main.rs  modes.rs  pixylene_tui.rs  raw_actions.rs  tui_actions.rs
src/stroke/: mod.rs  stroke.rs
tests/: tests.py
(+9 files in other folders)
