[package]
name = "pixylene-actions-lua"
version = "0.1.0"
edition = "2021"

[dependencies]
libpixylene = { path = "../libpixylene" }
mlua = { version = "0.9.5", features = [ "vendored" ] }
pixylene-actions = { path = "../pixylene-actions" }
tealr = { version = "0.9.1", features = [ "mlua_lua54", "derive" ] }
