[package]
name = "pixylene-lua"
version = "0.1.0"
edition = "2021"

[dependencies]
libpixylene = { path = "../libpixylene" }
mlua = { version = "0.9.5", features = [ "vendored" ] }
pixylene-actions = { path = "../pixylene-actions" }
tealr = { git = "https://github.com/bhavyakukkar/tealr", features = [ "mlua_lua54", "derive" ] }
serde_json = { version = "1.0", optional = true }

[features]
docs = ["dep:serde_json"]

[[bin]]
name = "pixylene-lua-docs"
path = "src/bin/docs.rs"
required-features = ["docs"]
