[package]
name = "pixylene-ui"
version = "0.1.0"
edition = "2021"


[dependencies]
libpixylene = { path = "../libpixylene" }
pixylene-actions = { path = "../pixylene-actions" }
pixylene-actions-lua = { path = "../pixylene-actions-lua" }
clap = { version = "4.4.18", features = ["derive"] }
colored = { version = "2.1.0" }
serde = { version = "1.0.197", features = ["derive"] }
toml = "0.8.12"
crossterm = { version = "0.27.0", features = ["serde"] }

# extra deps for target minifb
minifb = { version = "0.25.0", optional = true, default-features = false, features = ["x11"] }
minifb_fonts = { version = "0.1.3", optional = true }


[features]
minifb = ["dep:minifb", "dep:minifb_fonts"]


[[bin]]
name = "crossterm"
path = "src/targets/target_crossterm.rs"


[[bin]]
name = "cli"
path = "src/targets/target_cli.rs"


[[bin]]
name = "minifb"
path = "src/targets/target_minifb.rs"
required-features = ["minifb"]
