[package]
name = "pixylene-ui"
version = "0.1.0"
edition = "2021"


[dependencies]
libpixylene = { path = "../libpixylene", features = ["resize"] }
pixylene-actions = { path = "../pixylene-actions" }
pixylene-lua = { path = "../pixylene-lua" }
clap = { version = "4.4.18", features = ["derive"] }
colored = { version = "2.1.0" }
serde = { version = "1.0.197", features = ["derive"] }
toml = "0.8.12"
crossterm = { version = "0.26.0", features = ["serde"] }
dirs = "5.0.1"

# extra deps for target minifb
minifb = { version = "0.25.0", optional = true, default-features = false, features = ["x11"] }
minifb_fonts = { version = "0.1.3", optional = true }
keymap = "0.4.0"
pom = "3.4.0"
shlex = "1.3.0"


[features]
minifb = ["dep:minifb", "dep:minifb_fonts"]


[[bin]]
name = "pixylenetui"
path = "src/targets/target_crossterm.rs"


[[bin]]
name = "pixylenecli"
path = "src/targets/target_cli.rs"


[[bin]]
name = "pixylenegui"
path = "src/targets/target_minifb.rs"
required-features = ["minifb"]
