[package]
name = "pixylene-ui"
version = "0.1.0"
edition = "2021"


[dependencies]
libpixylene = { path = "../libpixylene", features = ["resize"] }
pixylene-actions = { path = "../pixylene-actions" }
pixylene-lua = { path = "../pixylene-lua", optional = true }
clap = { version = "4.4.18", features = ["derive"] }
colored = { version = "2.1.0" }
serde = { version = "1.0.197", features = ["derive"] }
toml = "0.8.12"
crossterm = { git = "https://github.com/bhavyakukkar/crossterm", branch = "pixylene", features = ["serde"], optional = true }
dirs = "5.0.1"
keymap = { git = "https://github.com/bhavyakukkar/keymap-rs", branch = "pixylene" }
pom = "3.4.0"
shlex = "1.3.0"

# extra deps for target pixylenegui
minifb = { version = "0.25.0", optional = true, default-features = false, features = ["x11"] }
minifb_fonts = { version = "0.1.3", optional = true }

# extra deps for target pixyleneweb
wasm-bindgen = { version = "0.2.92", optional = true }


[features]
wasm = ["crossterm/key-only", "dep:wasm-bindgen"]
tui = ["dep:crossterm"]
lua = ["dep:pixylene-lua"]
minifb = ["dep:minifb", "dep:minifb_fonts"]


[[bin]]
name = "pixylenetui"
path = "src/targets/target_crossterm.rs"
required-features = ["tui"]


[[bin]]
name = "pixylenecli"
path = "src/targets/target_cli.rs"
required-features = ["tui"]


[[bin]]
name = "pixylenegui"
path = "src/targets/target_minifb.rs"
required-features = ["tui", "minifb"]


[[bin]]
name = "pixyleneweb"
path = "src/targets/target_web.rs"
required-features = ["wasm"]
