[package]
name = "pixylenetui"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libpixylene = { path = "../libpixylene" }
colored = "2.1.0"
crossterm = "0.27.0"
clap = { version = "4.4.18", features = ["derive"] }
